<resources>
    <string name="app_name">TravelPackingApp</string>
    <string name="add_to_packing_list">Add to Packing List</string>
    <string name="exit">Exit</string>
    <string name="second">Second</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_comments">Enter Comments</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="back">Back</string>
    <string name="display">Display</string>
    <string name="quantity">Quantity</string>
    <string name="output">Output</string>
</resources>