<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D283593"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="111dp"
        android:text="@string/add_to_packing_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtComments" />

    <Button
        android:id="@+id/btnSecond"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="47dp"
        android:text="@string/second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="47dp"
        android:text="@string/exit"
        app:layout_constraintStart_toEndOf="@+id/btnSecond"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <EditText
        android:id="@+id/edtItem"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="41dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edtCategory"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItem"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edtQuantity"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCategory"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edtComments"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity"
        tools:ignore="Autofill,LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>