<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D283593"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="103dp"
        android:layout_height="82dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="618dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="411dp"
        android:text="@string/display"
        app:layout_constraintStart_toEndOf="@+id/btnQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnQuantity"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="348dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOutput" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>